# dlt_logger

./: ReadMe.txt
dlt-daemon/: build.sh  dlt.conf  dlt_logstorage.conf  start-file.sh  test.sh
example4/: example4.c  start.sh
wrapper/: CMakeLists.txt  ReadMe.txt  run.sh
wrapper/include/: func.h  logger.h
wrapper/src/: func.cpp  logger.cpp
wrapper/test/: CMakeLists.txt  main.cpp  run.sh
